--- a/a_dozen_roses/dozenroses/roses/templates/roses/index.html
+++ b/a_dozen_roses/dozenroses/roses/templates/roses/index.html
@@ -14,7 +14,7 @@
 
     <div id="log_in_welcome">
         <h2>Welcome to A Dozen Roses!</h2>
-        <h2>Please <a href="{% url 'login' %}"">Login</a> or <a href="{% url 'register' %}">Register</a></h2>
+        <h2>Please <a href="{% url 'login' %}">Login</a> or <a href="{% url 'register' %}">Register</a></h2>
     </div>
 
     <div id="problems">
