Completed refactoring to bring all logic to front end and modularize front end.

--- a/a_dozen_roses/dozenroses/roses/templates/roses/index.html
+++ b/a_dozen_roses/dozenroses/roses/templates/roses/index.html
@@ -24,6 +24,5 @@
 {% endblock %}
 
 {% block script %}
-    <script src="{% static 'roses/speech.js' %}"></script>
-    <script src="{% static 'roses/roses.js' %}"></script>
+    <script src="{% static 'roses/roses.js' %}" type="module"></script>
 {% endblock %}
