Many changes to district assignment model.

--- a/notedly_as_flask/app/templates/base.html
+++ b/notedly_as_flask/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}Notedly by Flask{% endblock %}
+{% block title %}Notedly as Flask{% endblock %}
 
 {% block head %}
 {{ super() }}
