Basic login and registration functionality complete

--- a/notedly_as_flask/app/templates/base.html
+++ b/notedly_as_flask/app/templates/base.html
@@ -30,6 +30,24 @@
                   Home
                 </a>
             </li>
+            <li>
+                <a href="{{ url_for('main.index') }}">
+                    <span aria-hidden="true" role="img">📓</span>
+                    My Notes
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('main.index') }}">
+                    <span aria-hidden="true" role="img">🌟</span>
+                    Favorites
+                </a>
+            </li>
+            <li>
+                <a href="{{ url_for('main.index') }}">
+                    <span aria-hidden="true" role="img">➕</span>
+                    New
+                </a>
+            </li>
         </ul>
     </div>
 </div>
