--- a/notedly_as_flask/app/templates/base.html
+++ b/notedly_as_flask/app/templates/base.html
@@ -43,7 +43,7 @@
                 </a>
             </li>
             <li>
-                <a href="{{ url_for('main.index') }}">
+                <a href="{{ url_for('main.new') }}">
                     <span aria-hidden="true" role="img">➕</span>
                     New
                 </a>
