--- a/notedly_as_flask/app/templates/new.html
+++ b/notedly_as_flask/app/templates/new.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block page_content %}
-    {% include '_notes.html' %}
+    {{ wtf.quick_form(form) }}
 {% endblock %}
 
 {% block scripts %}
