--- a/notedly_as_flask/app/templates/_notes.html
+++ b/notedly_as_flask/app/templates/_notes.html
@@ -8,7 +8,7 @@
         </div>
         <div class="note-content">
             <div class="note-date">{{ moment(note.timestamp).fromNow() }}</div>
-            <div class="note-author"><a href="#">{{ note.author.username }}</a></div>
+            <div class="note-author"><a href="{{ url_for('.user', username=note.author.username) }}">{{ note.author.username }}</a></div>
             <div class="note-body">
                 {% if note.content_html %}
                     {{ note.body_html | safe }}
