--- a/notedly_as_flask/app/templates/base.html
+++ b/notedly_as_flask/app/templates/base.html
@@ -16,8 +16,8 @@
                 <img src="{{ url_for('static', filename='logo.svg') }}" alt="Notedly Logo" height="40">
                 Notedly by Flask
             </a>
-            {% if current_user.is_authenticated %}
-                <a href="{{ url_for('auth.logout') }}">Log Out</a>
+            {% if not current_user.is_anonymous %}
+                <a href="{{ url_for('auth.logout') }}">Log Out {{ current_user.username }}</a>
             {% else %}
                 <a href="{{ url_for('auth.login') }}">Sign In</a>
                 <a href="{{ url_for('auth.register') }}">Sign Up</a>
@@ -30,12 +30,14 @@
                   Home
                 </a>
             </li>
+            {% if not current_user.is_anonymous %}
             <li>
-                <a href="{{ url_for('main.index') }}">
+                <a href="{{ url_for('.user', username=current_user.username) }}">
                     <span aria-hidden="true" role="img">📓</span>
                     My Notes
                 </a>
             </li>
+            {% endif %}
             <li>
                 <a href="{{ url_for('main.index') }}">
                     <span aria-hidden="true" role="img">🌟</span>
