--- a/notedly_as_flask/app/templates/base.html
+++ b/notedly_as_flask/app/templates/base.html
@@ -39,7 +39,7 @@
             </li>
             {% endif %}
             <li>
-                <a href="{{ url_for('main.index') }}">
+                <a href="{{ url_for('.favorites', username=current_user.username) }}">
                     <span aria-hidden="true" role="img">🌟</span>
                     Favorites
                 </a>
